fixed title and some verticle spacing

--- a/assets/style.css
+++ b/assets/style.css
@@ -17,7 +17,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 5rem;
   height: 100%;
   margin: 3rem;
   font-family: sans-serif;
@@ -30,6 +29,12 @@ span {
 
 header {
   text-align: center;
+  
+}
+
+header h1 {
+  text-shadow:  5px 5px 10px rgba(0, 0, 0, .25);
+  background: transparent;
 }
 
 .prompt-generator, .check-box-generator {
@@ -40,13 +45,14 @@ header {
   12.5px 12.5px 10px rgba(0, 0, 0, 0.035),
   22.3px 22.3px 17.9px rgba(0, 0, 0, 0.042),
   41.8px 41.8px 33.4px rgba(0, 0, 0, 0.05),
-  100px 100px 80px rgba(0, 0, 0, 0.07)
-  ;
+  100px 100px 80px rgba(0, 0, 0, 0.07);
   color: hsl(206, 17%, 28%);
   font-size: 18px;
   margin: 0 auto;
   max-width: 100%;
   padding: 30px 40px;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .check-box-generator .card-body {
@@ -160,7 +166,7 @@ header {
 
   #multiple-check-boxes {
     flex-direction: column;
-
+  }
 }
 
 @media (max-width: 500px) {
@@ -174,5 +180,9 @@ header {
 
   * {
     font-size: 1rem;
+  }
+
+  header {
+    font-size: 2rem;
   }
 }
